-Fixed fake players not being fully removed from the client when playback ended with death.
-Fixed fake players in "player as entity" mode not being able to interact with blocks (thanks to awesome_nobel46 for reporting).
-Fixed vehicles not appearing in the playback after disabling "playItemEntities", "playOtherEntities" and "playBlockActions", despite "playVehicleEntities" being enabled.
-Minor spelling improvements.
-Minor improvements to error detection.

===Version 1.3.9===
-Fixed playback stopping after a non-player entity places a block on version 1.19.2 and older (thanks to awesome_nobel46 for reporting).

===Version 1.3.8===
-Fixed fake players receiving damage only one time during playback.

===Version 1.3.7===
-Fixed fake players not being removed from the client level after being outside of render distance during the entirety of playback.
-Name "Mocap" is now used instead of "MocapMod" in "/mocap info" and "/mocap help" command output.
-Version information is no longer sent to logs during startup.

===Version 1.3.6===
-Fixed Forge 1.20.6 version not working.

===Version 1.3.5===
-Updated recording format.

===Version 1.3.4===
-Fixed an issue causing recording corruption when recording item or entity with NBT data containing non-ASCII characters (thanks to INV-PLA for reporting).
-Fixed missing translation key for copying and renaming a scene.

===Version 1.3.3===
-Fixed a compatibility issue with JourneyMap (issue reported by seriousfreezing).

===Version 1.3.2===
-Placing fire with flint and steel is now recorded on Fabric (issue reported by Libreh).
-Fixed issue with skin top layers when playing multiple players on version 1.19.2 and older (reported by fogartyfox_gamer).

===Version 1.3.1===
-Added settings "fluentMovements" controlling distance to played entity for player to receive additional packets for more fluent movements (32 by default).
-Fixed entity data synchronization issues.